# prd-pipeline

./: CHANGELOG.md  LICENSE  README.md  install.sh
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/plans/: 0002-version-update-cli.md
docs/specs/: 0001-installer-smoke-test-ci.md  0002-version-update-cli.md  0003-prd-audit.md
plugins/bad-research/.claude-plugin/: plugin.json
plugins/bad-research/agents/: bad-research-corpus-critic.md  bad-research-depth-critic.md  bad-research-depth-investigator.md  bad-research-dialectic-critic.md  bad-research-draft-orchestrator.md  bad-research-fetcher.md  bad-research-fresh-reviewer.md  bad-research-instruction-critic.md  bad-research-light-critic.md  bad-research-loci-analyst.md  bad-research-patcher.md  bad-research-polish-auditor.md  bad-research-readability-recommender.md  bad-research-source-analyst.md  bad-research-synthesizer.md  bad-research-width-critic.md
plugins/bad-research/engine/: LICENSE  README.md  pyproject.toml
plugins/bad-research/engine/src/bad_research/: __init__.py  __main__.py  _banner.py  config.py  pipeline.py  providers.py
plugins/bad-research/engine/src/bad_research/browse/: __init__.py  agent_browser.py  aql.py  base.py  cache.py  extract_llm.py  ladder.py
plugins/bad-research/engine/src/bad_research/calibrate/: __init__.py  baselines.py  constants.py  cost.py  golden.py  harness.py  headtohead.py  judge.py  runner.py
plugins/bad-research/engine/src/bad_research/calibrate/golden/: 01_causal_light.json  02_comparison.json  03_multidomain_full.json  04_contested_argumentative.json  05_definitional.json  06_recency_temporal.json  07_breadth_list.json  08_numeric_precise.json  09_cited_contradiction.json  10_over_hedged_completeness.json
plugins/bad-research/engine/src/bad_research/cli/: __init__.py  _output.py  assets.py  calibrate.py  doctor.py  export.py  fetch.py  grounding_surface.py  headtohead.py  install.py  research.py  vault_cmds.py
plugins/bad-research/engine/src/bad_research/core/: agent_docs.py  codex_install.py  codex_translate.py  db.py  enrich.py  fetcher.py  frontmatter.py  hooks.py  migrations.py  note.py  sync.py  vault.py
plugins/bad-research/engine/src/bad_research/embed/: __init__.py  base.py  bge_local.py
plugins/bad-research/engine/src/bad_research/export/: __init__.py  html.py  refs.py
plugins/bad-research/engine/src/bad_research/funnel/: __init__.py  _async.py  canonical.py  config.py  dedup.py  fanout.py  filter.py  orchestrator.py  rank.py  read.py  recency.py  store.py
plugins/bad-research/engine/src/bad_research/grounding/: __init__.py  anchors.py  extract.py  gate.py  nli.py  recall_harness.py  render.py  verifier.py
plugins/bad-research/engine/src/bad_research/llm/: __init__.py  anthropic.py  base.py
plugins/bad-research/engine/src/bad_research/mcp/: server.py
plugins/bad-research/engine/src/bad_research/models/: note.py
plugins/bad-research/engine/src/bad_research/quality/: __init__.py  consistency.py  content_filter.py  dedup.py  grader.py  injection.py  prefilter.py  rank.py  recitation.py  relevance.py  sources.py
plugins/bad-research/engine/src/bad_research/retrieval/: __init__.py  anchors.py  base.py  cache.py  chunker.py  chunker_code.py  constants.py  engine.py  fts_chunks.py  fusion.py  reflections.py  rerank.py  store.py
plugins/bad-research/engine/src/bad_research/search/: fts.py
plugins/bad-research/engine/src/bad_research/serve/: server.py
plugins/bad-research/engine/src/bad_research/skills/: bad-research-0.5-clarify.md  bad-research-1-decompose.md  bad-research-1.6-plan-gate.md  bad-research-10-triple-draft.md  bad-research-11-synthesize.md  bad-research-11.5-citation-verifier.md  bad-research-12-critics.md  bad-research-12.5-grader.md  bad-research-13-gap-fetch.md  bad-research-14-patcher.md  bad-research-15-polish.md  bad-research-16-readability-audit.md  bad-research-2-width-sweep.md  bad-research-4-loci-analysis.md  bad-research-5-depth-investigation.md  bad-research-6-cross-locus-reconcile.md  bad-research-8-corpus-critic.md  bad-research-fast.md  bad-research-fresh-review.md  bad-research-query-router.md  bad-research-ultrafast.md  bad-research.md  router.py  routing_constants.py
plugins/bad-research/engine/src/bad_research/skills/codex/: dispatch-table.md  router-preamble.md
plugins/bad-research/engine/src/bad_research/web/: base.py  builtin.py  crawl4ai_provider.py
plugins/bad-research/engine/src/bad_research/web/content/: __init__.py  fetch_clean.py  sources.py
plugins/bad-research/engine/src/bad_research/web/search/: __init__.py  base.py  loop.py  rank.py  rerank.py  route.py  verticals.py
plugins/bad-research/skills/bad-research/: SKILL.md
plugins/bad-research/skills/bad-research-0.5-clarify/: SKILL.md
plugins/bad-research/skills/bad-research-1-decompose/: SKILL.md
plugins/bad-research/skills/bad-research-1.6-plan-gate/: SKILL.md
plugins/bad-research/skills/bad-research-10-triple-draft/: SKILL.md
plugins/bad-research/skills/bad-research-11-synthesize/: SKILL.md
plugins/bad-research/skills/bad-research-11.5-citation-verifier/: SKILL.md
plugins/bad-research/skills/bad-research-12-critics/: SKILL.md
plugins/bad-research/skills/bad-research-12.5-grader/: SKILL.md
plugins/bad-research/skills/bad-research-13-gap-fetch/: SKILL.md
plugins/bad-research/skills/bad-research-14-patcher/: SKILL.md
plugins/bad-research/skills/bad-research-15-polish/: SKILL.md
plugins/bad-research/skills/bad-research-2-width-sweep/: SKILL.md
plugins/compound-v/: .gitignore  README.md
plugins/compound-v/.claude-plugin/: plugin.json
plugins/compound-v/agents/: code-reviewer.md
plugins/compound-v/hooks/: session-start
plugins/compound-v/references/: interface-checklist.md  skill-format.md  sources.md
plugins/compound-v/scripts/: check.sh
plugins/prd-pipeline/.claude-plugin/: plugin.json
plugins/prd-pipeline/hooks/: router.md  session-start
rules/: feature-workflow.md
skills/prd-pipeline/: SKILL.md
skills/prd-pipeline/references/: research-notes.md  spec-template.md
tests/: smoke.sh
(+30 files in other folders)
